apps/searxng/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-route
  namespace: searxng
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`search.trivernis.dev`)
    kind: Rule
    services:
    - name: searxng-srv
      port: 8080
  - match: Host(`search.trivernis.net`)
    kind: Rule
    services:
    - name: searxng-srv
      port: 8080
